# ocam_linux

./: README.md  calibration.m  check_directory.m~  click_calib.m  data_calib.m  data_calib.m~  get_checkerboard_corners.m  ima_read_calib.m~  loading_calib.m  ocam_calib_gui.m  optimizefunction.m  preprocess_images.m  preprocess_images.m~  run_script.m  run_script.m~  script_rectification.m  startup.m
+cv/: CamShift.mexa64  Canny.mexa64  EMD.mexa64  FAST.mexa64  FileStorage.mexa64  GaussianBlur.mexa64  HoughCircles.mexa64  HoughLines.mexa64  HoughLinesP.mexa64  HuMoments.mexa64  Laplacian.mexa64  MSER.mexa64  ORB.mexa64  RQDecomp3x3.mexa64  Rodrigues.mexa64  SIFT.mexa64  SURF.mexa64  Scharr.mexa64  Sobel.mexa64  StarDetector.mexa64  adaptiveThreshold.mexa64  approxPolyDP.mexa64  arcLength.mexa64  bilateralFilter.mexa64  blur.mexa64  boundingRect.mexa64  buildPyramid.mexa64  calcBackProject.mexa64  calcGlobalOrientation.mexa64  calcHist.mexa64  calcMotionGradient.mexa64  calcOpticalFlowFarneback.mexa64  calcOpticalFlowPyrLK.mexa64  calibrateCamera.mexa64  calibrationMatrixValues.mexa64  circle.mexa64  clipLine.mexa64  compareHist.mexa64  composeRT.mexa64  computeCorrespondEpilines.mexa64  (+96 more)
autoCornerFinder/: Makefile  main.cpp  pictures.txt
caltech_toolbox/: run_script_caltech.m
gui/: ocam_calib.m
undist_ocam/: CMakeLists.txt  undistort_ocam.m  undistort_ocam.m~
undist_ocam/src/: main.cpp
utils/: check_directory.m  click_calib.m  data_calib.m  exportData2TXT.m  export_data.m  get_checkerboard_corners.m  ima_read_calib.m  opencv.sh  preprocess_images.m  start_up.m  (+1 more)
(+42 files in other folders)
